Fix logo spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -109,7 +109,7 @@
 }
 
 .sitename {
-  margin-right: 1em;
+  margin-right: 1em !important;
 }
 
 .sitename a {
